// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FirebaseResetPassword submit calls dispatch prop 1`] = `
<button
  onClick={[Function]}
>
  Submit
</button>
`;

exports[`FirebaseResetPassword updateEmail updates email 1`] = `
<div
  onClick={[Function]}
/>
`;

exports[`FirebaseResetPassword updateEmail updates email 2`] = `
<div
  onClick={[Function]}
>
  test@test.com
</div>
`;
